force-app/main/default/objects/CTRBuProfile__mdt.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                    <default>true</default>
                    <label>TOP</label>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>LABIX</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Button_Name__c</fullName>
        <label>Edit Button Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReassignTask_Section_Name__c</fullName>
        <label>ReassignTask Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Credit_Condition__c</fullName>
        <label>Section Credit Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPSectionName__c</fullName>
        <label>VP Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CTRBuProfile</label>
</CustomObject>